preventing slider text from overflowing

--- a/css/index.css
+++ b/css/index.css
@@ -147,6 +147,7 @@ body{
     height: 40px;
     width: 40px;
     background-color: #049DD9;
+    overflow: hidden;
 }
 
 .sliderPreview{
@@ -159,7 +160,7 @@ body{
 .sliderText{
     display: none;
     font-family: sans-serif;
-    font-size: calc(8px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
+    font-size: calc(14px + (24 - 14) * ((100vw - 500px) / (2500 - 500)));
     color: transparent;
 }
 
